force-app/main/default/objects/Subentregable__c/fields/AprobadorFinal__c.field-meta.xml
<CustomField>
    <fullName>AprobadorFinal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Normally the client: Once approved, it goes to the final approver</inlineHelpText>
    <label>Aprobador Final</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EntregablesFirmar</relationshipName>
    <type>Lookup</type>
</CustomField>