force-app/main/default/objects/Subentregable__c/fields/AprobadorN1__c.field-meta.xml
<CustomField>
    <fullName>AprobadorN1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Normally the client: Once approved, it goes to the final approver</inlineHelpText>
    <label>Aprobador Nivel 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EntregablesSupervisados</relationshipName>
    <type>Lookup</type>
</CustomField>