force-app/main/default/objects/Subentregable__c/fields/AvancePonderado__c.field-meta.xml
<CustomField>
    <fullName>AvancePonderado__c</fullName>
    <formula>Peso__c *  Avance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Weight per advance. Used to calculate the production progress of the deliverable</inlineHelpText>
    <label>Avance Ponderado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>