force-app/main/default/objects/Subentregable__c/fields/Cerrado__c.field-meta.xml
<CustomField>
    <fullName>Cerrado__c</fullName>
    <formula>ISPICKVAL(Estado__c, &apos;Firmado&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cerrado</label>
    <type>Checkbox</type>
</CustomField>