force-app/main/default/objects/Subentregable__c/fields/Descripciom__c.field-meta.xml
<CustomField>
    <fullName>Descripciom__c</fullName>
    <label>Descripción</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>