force-app/main/default/objects/Subentregable__c/fields/DescripcionTasking__c.field-meta.xml
<CustomField>
    <fullName>DescripcionTasking__c</fullName>
    <description>En los casos que el entregable tenga un estado liberado o firmado almacena la descripción importada de Tasking por si se necesita en el futuro</description>
    <label>Descripcion Tasking</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>