force-app/main/default/objects/Subentregable__c/fields/Entregable_Retrasado__c.field-meta.xml
<CustomField>
    <fullName>Entregable_Retrasado__c</fullName>
    <description>Aquellos entregables que cumplan Fecha Primera Liberación &gt; Fecha Fin Contractual</description>
    <formula>IF(  DATEVALUE(Fecha_Primera_Liberacion__c)  &gt;  FechaLimiteLiberacion__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entregable Retrasado</label>
    <type>Checkbox</type>
</CustomField>