force-app/main/default/objects/Subentregable__c/fields/Estado_Tasking__c.field-meta.xml
<CustomField>
    <fullName>Estado_Tasking__c</fullName>
    <label>Estado Tasking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>En proceso</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Pendiente revisión</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Bloqueado</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Finalizado</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Liberado</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Firmado</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Cancelado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>