force-app/main/default/objects/Subentregable__c/fields/Fecha_Firma_Aprobador_1__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Firma_Aprobador_1__c</fullName>
    <label>Fecha Firma Aprobador 1</label>
    <type>Date</type>
</CustomField>