force-app/main/default/objects/Subentregable__c/fields/Fecha_Primera_Liberacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Primera_Liberacion__c</fullName>
    <description>Fecha de la primera liberación</description>
    <label>Fecha Primera Liberación</label>
    <type>DateTime</type>
</CustomField>