force-app/main/default/objects/Subentregable__c/fields/Fecha_real_de_fin__c.field-meta.xml
<CustomField>
    <fullName>Fecha_real_de_fin__c</fullName>
    <label>Fecha Fin Real</label>
    <type>DateTime</type>
</CustomField>