force-app/main/default/objects/Subentregable__c/fields/Fecha_Real_de_Liberacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Real_de_Liberacion__c</fullName>
    <label>Fecha Real de Liberación</label>
    <type>DateTime</type>
</CustomField>