force-app/main/default/objects/Subentregable__c/fields/Fecha_Real_de_Solicitud_de_Aceptacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Real_de_Solicitud_de_Aceptacion__c</fullName>
    <label>Fecha Real de Solicitud de Aceptación</label>
    <type>DateTime</type>
</CustomField>