force-app/main/default/objects/Subentregable__c/fields/FechaLimiteFirma__c.field-meta.xml
<CustomField>
    <fullName>FechaLimiteFirma__c</fullName>
    <label>Fecha Límite de Firma</label>
    <type>Date</type>
</CustomField>