force-app/main/default/objects/Subentregable__c/fields/FechaLimiteLiberacion__c.field-meta.xml
<CustomField>
    <fullName>FechaLimiteLiberacion__c</fullName>
    <label>Fecha Fin Contractual</label>
    <type>Date</type>
</CustomField>