force-app/main/default/objects/Subentregable__c/fields/FechaLimitePasoRevision__c.field-meta.xml
<CustomField>
    <fullName>FechaLimitePasoRevision__c</fullName>
    <label>Fecha Límite de Paso a Revisión</label>
    <type>Date</type>
</CustomField>