force-app/main/default/objects/Subentregable__c/fields/FechaRealPasoRevision__c.field-meta.xml
<CustomField>
    <fullName>FechaRealPasoRevision__c</fullName>
    <label>Fecha Real de Paso a Revisión</label>
    <type>DateTime</type>
</CustomField>