force-app/main/default/objects/Subentregable__c/fields/Grupos_de_Entregables__c.field-meta.xml
<CustomField>
    <fullName>Grupos_de_Entregables__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nueva relación LKP entre los entregables  y  Grupos de eentregables</description>
    <label>Grupos de Entregables</label>
    <referenceTo>Entregable__c</referenceTo>
    <relationshipLabel>Entregables (Grupos de Entregables)</relationshipLabel>
    <relationshipName>Entregables1</relationshipName>
    <type>Lookup</type>
</CustomField>