force-app/main/default/objects/Subentregable__c/fields/Hito__c.field-meta.xml
<CustomField>
    <fullName>Hito__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hito</label>
    <referenceTo>Hito__c</referenceTo>
    <relationshipLabel>Entregables</relationshipLabel>
    <relationshipName>Entregables</relationshipName>
    <type>Lookup</type>
</CustomField>