force-app/main/default/objects/Subentregable__c/fields/Responsable_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Responsable_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable Cliente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Entregables</relationshipLabel>
    <relationshipName>Entregables</relationshipName>
    <type>Lookup</type>
</CustomField>