force-app/main/default/objects/Subentregable__c/fields/Soy_ResponsableN1__c.field-meta.xml
<CustomField>
    <fullName>Soy_ResponsableN1__c</fullName>
    <formula>ResponsableN1__c =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Soy Responsable Nivel 1</label>
    <type>Checkbox</type>
</CustomField>