force-app/main/default/objects/Subentregable__c/fields/Soy_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Soy_Supervisor__c</fullName>
    <formula>AprobadorN1__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Soy Supervisor</label>
    <type>Checkbox</type>
</CustomField>