force-app/main/default/objects/Subentregable__c/fields/Subtipo__c.field-meta.xml
<CustomField>
    <fullName>Subtipo__c</fullName>
    <label>Subtipo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Subtipo_Entregable</valueSetName>
    </valueSet>
</CustomField>