force-app/main/default/objects/Subentregable__c/fields/URL_Doc_Firmada__c.field-meta.xml
<CustomField>
    <fullName>URL_Doc_Firmada__c</fullName>
    <label>URL Doc Firmada</label>
    <length>1050</length>
    <type>LongTextArea</type>
</CustomField>